--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <a href="#">Home</a> |
-    <a href="/html/Resume.html">Resume</a> |
-    <a href="/html/AboutMe.html">About Me</a> |
-    <a href="/html/Tableau.html">Tableau</a> |
-    <a href="/html/ProfessionalWS.html">Professional Web Site</a>
+    <a href="html/Resume.html">Resume</a> |
+    <a href="html/AboutMe.html">About Me</a> |
+    <a href="html/Tableau.html">Tableau</a> |
+    <a href="html/ProfessionalWS.html">Professional Web Site</a>
     <br><br>
 
     <h1>Home Page</h1>
